--- a/src/App.module.css
+++ b/src/App.module.css
@@ -33,6 +33,11 @@ section h3 {
   padding: 2rem 2rem;
 }
 
+.bold {
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
 .skills {
   background-color: #c3cfe2;
 }
@@ -119,11 +124,7 @@ footer img {
     padding-top: 7.5rem;
     padding-bottom: 5rem;
   }
-  .desktop__aboutme .aboutme__img {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
+
   .aboutme {
     font-size: 1rem;
     padding-top: 3rem;
@@ -131,16 +132,29 @@ footer img {
   }
   .aboutme div {
     display: flex;
-  }
-  .aboutme div div {
-    display: flex;
     flex-direction: column;
+  }
+  .aboutme .aboutme__img {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
   .aboutme img {
-    width: 240px;
+    width: 340px;
     margin-right: 1.2rem;
   }
+
+  .aboutme p {
+    display: inline-block;
+    max-width: 670px;
+    margin: 1rem auto;
+  }
+  .bold {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+
   .skills {
     padding-top: 3rem;
     padding-bottom: 3rem;
